--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <script src="resources/js/app.js" ></script>
         <script src="resources/js/filters/filters.js" ></script>
         <script type="text/javascript" src="resources/js/controllers/noSurfCtrl.js"></script>
-
+        
+        <script src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     </head>
     <body class="splash" ng-controller="noSurfCtrl" ng-class="{'modal-show':modalShow.value}">
@@ -298,7 +299,6 @@
             </div>
             <div class="row rodape">
                 <div>
-                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- Praianos3 -->
                     <ins class="adsbygoogle"
                          style="display:block"
@@ -306,7 +306,7 @@
                          data-ad-slot="6774236433"
                          data-ad-format="auto"></ins>
                     <script>
-                                            (adsbygoogle = window.adsbygoogle || []).push({});
+                                (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
                 </div>
 
@@ -411,7 +411,6 @@
                 <div class="modal-foot">
 
                     <div class="col-md-12">
-                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                         <!-- Praianos3 -->
                         <ins class="adsbygoogle"
                              style="display:block"
@@ -419,7 +418,7 @@
                              data-ad-slot="6774236433"
                              data-ad-format="auto"></ins>
                         <script>
-                                                    (adsbygoogle = window.adsbygoogle || []).push({});
+                                    (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
                     </div>
 
@@ -528,8 +527,6 @@
                 </div>
                 <div class="modal-foot">
                     <div class="col-md-12">
-
-                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                         <!-- Praianos3 -->
                         <ins class="adsbygoogle"
                              style="display:block"
@@ -537,7 +534,7 @@
                              data-ad-slot="6774236433"
                              data-ad-format="auto"></ins>
                         <script>
-                                                (adsbygoogle = window.adsbygoogle || []).push({});
+                                    (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
 
                     </div>
@@ -553,12 +550,5 @@
     </body>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTbk54QQ8sHvqi0QhZ0HAAoQa_pllO4Co&callback=initMap"
     async defer></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-                                        (adsbygoogle = window.adsbygoogle || []).push({
-                                            google_ad_client: "ca-pub-8292462256462069",
-                                            enable_page_level_ads: true
-                                        });
-    </script>
     <script src="resources/js/aux.js"></script>
 </html>
