--- a/test2.html
+++ b/test2.html
@@ -14,15 +14,7 @@
         <script src="resources/lib/angular-pageslide-directive/dist/angular-pageslide-directive.js" ></script>
         <script src="resources/lib/hammerjs/hammer.js" ></script>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({
-                google_ad_client: "ca-pub-8292462256462069",
-                enable_page_level_ads: true
-            });
-        </script>
-
-
-
+        
         <script type="text/javascript">
 
 
@@ -35,12 +27,14 @@
         </script>
         <style type="text/css">
             .test{
-                border: solid red 1px;
-                //height: 50vh;
-                overflow: hidden;
+                /*                border: solid red 1px;
+                                overflow: hidden;*/
             }
             .test > div {
                 border: solid blue 1px;
+                /*height: 200px;*/
+            }
+            ins{
 
             }
         </style>
@@ -48,9 +42,8 @@
     </head>
 
     <body ng-controller="angCtrl" >
-        <div class="test col-md-12">
-            <div>
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <div class="test">
+            <div class="col-md-12">
                 <!-- Praianos3 -->
                 <ins class="adsbygoogle"
                      style="display:block"
@@ -58,11 +51,10 @@
                      data-ad-slot="6774236433"
                      data-ad-format="auto"></ins>
                 <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
+                (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
             </div>
-            <div>
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <div class="col-md-12">
                 <!-- Praianos3 -->
                 <ins class="adsbygoogle"
                      style="display:block"
@@ -70,11 +62,10 @@
                      data-ad-slot="6774236433"
                      data-ad-format="auto"></ins>
                 <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
+                (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
             </div>
-            <div>
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <div class="col-md-12">
                 <!-- Praianos2 -->
                 <ins class="adsbygoogle"
                      style="display:block"
@@ -82,7 +73,7 @@
                      data-ad-slot="5297503230"
                      data-ad-format="link"></ins>
                 <script>
-                        (adsbygoogle = window.adsbygoogle || []).push({});
+                (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
             </div>
         </div>
