--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
         </div> 
         <div class="loading" ng-show="loading">
-            <span class="glyphicon glyphicon-refresh "></span>
+            <!--<span class="glyphicon glyphicon-refresh "></span>-->
+            <img src="resources/img/loading.gif" />
         </div>
         <div class="loadError" ng-show="loadError">
             <div class="alert-danger">
