--- a/site/index.html
+++ b/site/index.html
@@ -798,7 +798,7 @@
                         </div>
                 </article>
                 <!-- Introduction -->
-                <!-- <article class="content introduction-end" id="chapterthankyou">
+                <article class="content introduction-end" id="chapterthankyou">
                     <div class="inner">
                         <div class="introduction-end-con margin-top50">
                             <h3><strong>Fernando Santos</strong></h3>
@@ -810,7 +810,7 @@
                             </div>
                         </div>
                     </div>
-                </article> -->
+                </article>
                 </div>
                 <!-- content-wrapper -->
             </div>
