--- a/site/index.html
+++ b/site/index.html
@@ -78,10 +78,10 @@
                             </ul>
                             <h3>Perfil profissional</h3>
                             <p>
-                                Software Engineer with 10+ years of experience in software development. I was the core engineer for MakerAll at Softwell, a tool for visual programming using workflow that won more than 10 innovation awards and US$ 11mi in investments from IFC.
+                                Desenvolvedor Back-end Front-end, sempre entisiasmado para aprender novas tecnologias.
                                 <br>
                             </p>
-                            <a href="downloads/CurriculumFernandoSantosEn-US.pdf" class="button">Download currículo em PDF</a>
+                            <a href="downloads/CurriculumFernandoSantosEn-US.pdf" class="button">Download de currículo em PDF</a>
                             <!-- <img src="http://nanndoj.com/images/signature.jpg" class="signature" alt="" /> -->
                         </div>
                     </div>
@@ -244,8 +244,10 @@
                     <div class="inner">
                         <h2>Experiência</h2>
                         <div class="title-divider"></div>
-                        <h3>10+ Years Experience!</h3>
-                        <p>Give me a challenge and I'll meet it with joy.</p>
+                        <h3>4+ Anos de Experiência</h3>
+                        <p>
+                            <!-- Give me a challenge and I'll meet it with joy. -->
+                        </p>
                         <div class="experience-con">
                             <div class="container-sub">
                                 <div class="full-divider"></div>
@@ -254,26 +256,51 @@
                                         <div class="col-6 margin-bottom50 margin-top50">
                                             <div class="col-3 icon-block"><i class="fa fa-send-o"></i></div>
                                             <div class="flot-left">
-                                                <h5>MEX Innovations</h5>
-                                                <h4>Partner and <br/> Software Engineer</h4>
-                                                <span>Current</span> </div>
+                                                <h5>Viação Itapemirim</h5>
+                                                <h5>
+                                                    Estagio: <br/>
+                                                    Suporte Técnico</h5>
+                                                <span>2014 - 2015</span> 
+                                            </div>
                                         </div>
-                                        <div class="col-6 margin-bottom50 margin-top50 no-margin-top">Start-up created to help government agencies in Brazil focused on software application using Google For Work platform. Working together with a local enterprise partner and Google Brazil to identify, suggest, and develop new customers demands. </div>
+                                        <div class="col-6 margin-bottom50 margin-top50 no-margin-top">
+                                            Realizava atividades relacionadas com manutenção e suporte de hardware e software<br/>
+                                            Diagnósticos<br/>
+                                            Backups dos Servidores<br/>
+                                            Atuava com correção e teste dos problemas identificados pelos usuários<br/>
+                                            Realizava atendimento via telefone, remotos e presencial<br/>
+                                            Configuração de software, manutenção do inventário de hardware e software da empresa<br />
+                                            Manutenção e suporte dos Servidores da empresa em questões de hardware e software<br />
+                                            Executava a instalação e manutenção de roteadores nos veículos utilizados na empresa<br />
+                                            Instalação, configuração e manutenção de cabeamento estruturado<br />
+                                            Contato com fornecedores de equipamentos<br/> 
+                                            Compras relacionadas a equipementos de TI<br/> 
+
+                                        </div>
                                     </div>
                                     <div class="full-divider"></div>
                                     <div class="experience-details">
                                         <div class="col-6 margin-bottom50 margin-top50">
                                             <div class="col-3 icon-block"><i class="fa fa-briefcase"></i></div>
                                             <div class="flot-left">
-                                                <h5>Microcom Aps Denmark</h5>
-                                                <h4>Technical Project Leader</h4>
-                                                <span>2011 - 2012</span> </div>
+                                                <h5>
+                                                XTab<br/>
+                                                Processamento <br/>
+                                                de Dados
+                                                </h5>
+                                                <h5>
+                                                Estágio:<br />
+                                                Programação em <br/>
+                                                linguagem Quantum
+                                                </h5>
+                                                <span>2013</span>
+                                            </div>
                                         </div>
                                         <div class="col-6 margin-bottom50 margin-top50 no-margin-top">
-                                            International experience in Denmark, participating on all phases of a financial software development. Applied Scrum methodology and Continuous Delivery to the development lifecycle. Used web technologies like HTML, CSS, Javascript and jQuery at client side, Java, Struts and Hibernate at server side and Firebird as database.
+                                           Desenvolvia consistências  utilizando linguagem Quantum para validação de questionários e seus respectivos bancos de dados.
                                         </div>
                                     </div>
-                                    <div class="full-divider"></div>
+                                    <!-- <div class="full-divider"></div>
                                     <div class="experience-details">
                                         <div class="col-6 margin-bottom50 margin-top50">
                                             <div class="col-3 icon-block"><i class="fa fa-arrows-alt"></i></div>
@@ -298,7 +325,7 @@
                                         <div class="col-6 margin-bottom50 margin-top50 no-margin-top">
                                             Websites development by creating a PHP tool that helps to improve productivity in development process. I have participated on ISO 9001 company certification process.
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -760,21 +787,21 @@
                                                 <!-- <a href="http://stackoverflow.com/users/840524/nanndoj" target="_blank">
                                                     <i class="fa fa-stack-overflow"></i>
                                                 </a> -->
-                                                <a href="https://www.linkedin.com/in/nanndoj" target="_blank">
+                                                <a href="" target="_blank">
                                                     <i class="fa fa-linkedin"></i>
                                                 </a>
-                                                <a href="http://github.com/nanndoj" target="_blank">
+                                                <a href="https://github.com/stdioh321" target="_blank">
                                                     <i class="fa fa-github-square"></i>
                                                 </a>
-                                                <a href="https://www.facebook.com/fernando.santos.BR" target="_blank">
+                                                <!-- <a href="https://www.facebook.com/fernando.santos.BR" target="_blank">
                                                     <i class="fa fa-facebook"></i>
-                                                </a>
-                                                <a href="https://twitter.com/nanndoj" target="_blank">
+                                                </a> -->
+                                                <!-- <a href="https://twitter.com/nanndoj" target="_blank">
                                                     <i class="fa fa-twitter"></i>
-                                                </a>
-                                                <a href="https://plus.google.com/u/1/+FernandoJorgeSantos" target="_blank">
+                                                </a> -->
+                                                <!-- <a href="https://plus.google.com/u/1/+FernandoJorgeSantos" target="_blank">
                                                     <i class="fa fa-google-plus"></i>
-                                                </a>
+                                                </a> -->
                                             </div>
                                         </div>
                                     </div>
@@ -801,12 +828,11 @@
                 <article class="content introduction-end" id="chapterthankyou">
                     <div class="inner">
                         <div class="introduction-end-con margin-top50">
-                            <h3><strong>Fernando Santos</strong></h3>
+                            <h3><strong>Henrique Lino Dias</strong></h3>
                             <div id="rotate" class="rotate">
-                                <div><span>UX Designer.</span></div>
-                                <div><span>Frontend Developer.</span></div>
-                                <div><span>Backend Developer.</span></div>
-                                <div><span>Programmer.</span></div>
+                                <div><span>Desenvolvedor Back-End .</span></div>
+                                <div><span>Desenvolvedor Front-End .</span></div>
+                                <div><span>Programador.</span></div>
                             </div>
                         </div>
                     </div>
