--- a/praianos/index.html
+++ b/praianos/index.html
@@ -551,5 +551,5 @@
     </body>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTbk54QQ8sHvqi0QhZ0HAAoQa_pllO4Co&callback=initMap"
     async defer></script>
-    <script src="resources/js/aux.js"></script>
+    <script src="resources/js/helpers.js"></script>
 </html>
